# build

./: .ghci  .ghcid  .gitignore  .hlint.yaml  .travis.yml  CHANGES.md  LICENSE  README.md  build-systems.cabal  build.cabal  report.html  stack.yaml
.github/workflows/: ci.yml
paper/: .gitignore  1-intro.tex  2-background.tex  3-abstractions.tex  3-compute.tex  4-build.tex  5-implementations.tex  6-engineering.tex  7-related.tex  8-conclusions.tex  9-appendix.tex  Dockerfile  Makefile  abstractions.tex  background.tex  build-abstractions.tex  build-examples.tex  build.tex  comment.cut  compute.tex  engineering.tex  final-changes.md  implementations.tex  intro.tex  main.tex  neil-comments-S2.txt  notes.md  refs.bib  related.tex  response.md
papers/icfp/: 2-background.tex  3-abstractions.tex  6-engineering.tex  Makefile  acmart.cls  main.tex  notes.md
papers/jfp/: .gitignore  1-intro.tex  10-conclusions.tex  2-background.tex  3-abstractions.tex  4-build.tex  4-schedulers.tex  5-implementations.tex  5-rebuilders.tex  6-engineering.tex  6-implementations.tex  7-experience.tex  7-related.tex  8-conclusions.tex  8-engineering.tex  9-appendix.tex  9-related.tex  Makefile  amsfonts.sty  bm.sty  jfp.bst  jfp1.cls  jfp2egui.tex  main.tex  mathptmx.sty  refs.bib  todo.md
src/: Build.hs
src/Development/: Build.hs
src/Neil/: Build.hs  Builder.hs  Compute.hs  Constraints.hs  DynamicMap.hs  Example.hs  Execute.hs  Implementation.hs  Types.hs  Util.hs
test/: Examples.hs  Main.hs  Spreadsheet.hs
