name:                build-systems
version:             0.0.1
synopsis:            Experimenting with build systems
homepage:            https://github.com/snowleopard/build-systems
license:             MIT
license-file:        LICENSE
author:              Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:          Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:           Andrey Mokhov, 2018
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/snowleopard/build-systems

library
  hs-source-dirs:       src
  exposed-modules:      Development.Build,
                        Development.Build.Compute,
                        Development.Build.Compute.Alternative,
                        Development.Build.Compute.Applicative,
                        Development.Build.Compute.Functor,
                        Development.Build.Compute.Monad,
                        Development.Build.Example.Expression,
                        Development.Build.NonDeterministic,
                        Development.Build.Plan,
                        Development.Build.Store,
                        Development.Build.Utilities
  build-depends:        base         >= 4.7 && < 5,
                        containers   >= 0.5.7.1,
                        filepath     >= 1.4.1.0,
                        mtl          >= 2.2.1,
                        transformers >= 0.5.2.0
  default-language:     Haskell2010
  GHC-options:          -O2
                        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints

test-suite test-expression
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    build-depends:      build-systems,
                        base         >= 4.7     && < 5,
                        containers   >= 0.5.7.1,
                        mtl          >= 2.2.1,
                        transformers >= 0.5.2.0
    default-language:   Haskell2010
    GHC-options:        -O2
                        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
