name:                build
version:             0.0.1
synopsis:            Build systems à la carte
homepage:            https://github.com/snowleopard/build
license:             MIT
license-file:        LICENSE
author:              Andrey Mokhov, Neil Mitchell, Simon Peyton Jones
maintainer:          Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:           Andrey Mokhov, Neil Mitchell, Simon Peyton Jones, 2018
category:            Algorithms, Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/snowleopard/build

library
  hs-source-dirs:       src
  exposed-modules:      Build,
                        Build.Algorithm,
                        Build.Example.Spreadsheet,
                        Build.NonDeterministic,
                        Build.Plan,
                        Build.Store,
                        Build.Task,
                        Build.Task.Alternative,
                        Build.Task.Applicative,
                        Build.Task.Functor,
                        Build.Task.Monad,
                        Build.Task.MonadPlus,
                        Build.Task.Typed,
                        Build.Trace,
                        Build.System,
                        Build.Utilities
  build-depends:        algebraic-graphs >= 0.0.5,
                        base             >= 4.7 && < 5,
                        containers       >= 0.5.7.1,
                        extra            >= 1.5.3,
                        filepath         >= 1.4.1.0,
                        mtl              >= 2.2.1,
                        random           >= 1.1,
                        transformers     >= 0.5.2.0
  default-language:     Haskell2010
  GHC-options:          -O2
                        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints

test-suite test
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    build-depends:      build,
                        base         >= 4.7     && < 5,
                        extra        >= 1.5.3,
                        containers   >= 0.5.7.1,
                        mtl          >= 2.2.1,
                        transformers >= 0.5.2.0
    default-language:   Haskell2010
    GHC-options:        -O2
                        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
