name:                build
version:             1.0
synopsis:            Build systems a la carte
homepage:            https://github.com/snowleopard/build
license:             MIT
license-file:        LICENSE
author:              Andrey Mokhov, Neil Mitchell, Simon Peyton Jones
maintainer:          Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:           Andrey Mokhov, Neil Mitchell, Simon Peyton Jones, 2018
category:            Algorithms, Data Structures
build-type:          Simple
extra-source-files:  README.md
description:         A library for experimenting with build systems and
                     incremental computation frameworks, based on the ideas
                     presented in the ICFP 2018 paper "Build Systems a la Carte".
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/snowleopard/build

library
  hs-source-dirs:       src
  exposed-modules:      Build,
                        Build.Multi,
                        Build.Rebuilder,
                        Build.SelfTracking,
                        Build.Scheduler,
                        Build.Store,
                        Build.Task,
                        Build.Task.Applicative,
                        Build.Task.Functor,
                        Build.Task.Monad,
                        Build.Task.MonadPlus,
                        Build.Task.Typed,
                        Build.Trace,
                        Build.System
  other-modules:        Build.Utilities
  build-depends:        algebraic-graphs >= 0.1.1   && < 0.2,
                        base             >= 4.7     && < 5,
                        containers       >= 0.5.7.1 && < 0.6,
                        extra            >= 1.5.3   && < 1.7,
                        filepath         >= 1.4.1.0 && < 1.5,
                        mtl              >= 2.2.1   && < 2.3,
                        random           >= 1.1     && < 1.2,
                        transformers     >= 0.5.2.0 && < 0.6
  default-language:     Haskell2010
  GHC-options:          -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints

test-suite test
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      Examples
                        Spreadsheet
    build-depends:      build,
                        base         >= 4.7     && < 5,
                        containers   >= 0.5.7.1 && < 0.6,
                        extra        >= 1.5.3   && < 1.7,
                        mtl          >= 2.2.1   && < 2.3,
                        transformers >= 0.5.2.0 && < 0.6
    default-language:   Haskell2010
    GHC-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
