cabal-version: 2.2
name:          build
version:       1.1
synopsis:      Build Systems à la Carte
homepage:      https://github.com/snowleopard/build
bug-reports:   https://github.com/snowleopard/build/issues
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov, Neil Mitchell, Simon Peyton Jones
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, Neil Mitchell, Simon Peyton Jones, 2018-2024
category:      Algorithms, Data Structures
build-type:    Simple
description:   A library for experimenting with build systems and incremental
               computation frameworks, based on the ideas presented in the ICFP
               2018 paper "Build Systems à la Carte".
tested-with:   GHC==9.8.2, GHC==9.6.3, GHC==9.4.7, GHC==9.2.8

extra-doc-files:
    CHANGES.md
    README.md

source-repository head
  type:     git
  location: https://github.com/snowleopard/build.git

library
  hs-source-dirs:       src
  exposed-modules:      Build,
                        Build.Multi,
                        Build.Rebuilder,
                        Build.SelfTracking,
                        Build.SelfTracking.Typed,
                        Build.Scheduler,
                        Build.Store,
                        Build.Task,
                        Build.Task.Applicative,
                        Build.Task.Free,
                        Build.Task.Functor,
                        Build.Task.Monad,
                        Build.Task.MonadPlus,
                        Build.Task.Opaque,
                        Build.Task.Typed,
                        Build.Trace,
                        Build.System
  other-modules:        Build.Utilities
  build-depends:        algebraic-graphs >= 0.5     && < 0.8,
                        base             >= 4.7     && < 5,
                        containers       >= 0.6     && < 0.7,
                        extra            >= 1.5.3   && < 1.8,
                        filepath         >= 1.4.1.0 && < 1.5,
                        mtl              >= 2.2.1   && < 2.4,
                        random           >= 1.1     && < 1.3,
                        transformers     >= 0.5.2.0 && < 0.7
  default-language:     Haskell2010
  ghc-options:          -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints

test-suite test
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      Examples
                        Spreadsheet
    build-depends:      build,
                        base         >= 4.7     && < 5,
                        containers   >= 0.6     && < 0.7,
                        extra        >= 1.5.3   && < 1.8,
                        mtl          >= 2.2.1   && < 2.4,
                        transformers >= 0.5.2.0 && < 0.7
    default-language:   Haskell2010
    ghc-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
